# VECTOR

./: .editorconfig  .env.example  .gitignore  ACKNOWLEDGEMENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: README.md
docs/: architecture.md  getting-started.md  mqtt-topics.md  roadmap.md
esp32_gps_telegram/: README.md  esp32_gps_telegram.ino
firmware/: .gitignore  README.md
firmware/esp32_node/: platformio.ini
firmware/xiao_sense/: platformio.ini
hardware/: README.md
integrations/: README.md
integrations/home_assistant/: README.md  discovery.py
integrations/mqtt/: mosquitto.conf
robotics/: README.md
robotics/ros2_ws/src/vector_bringup/: package.xml  setup.cfg  setup.py
robotics/ros2_ws/src/vector_bringup/launch/: vector.launch.py
server/: .dockerignore  Dockerfile  README.md  pyproject.toml
server/app/: __init__.py  config.py  logging_config.py  main.py  services.py
server/app/api/: __init__.py  deps.py
server/app/api/routes/: __init__.py  assistant.py  health.py  home.py  robots.py  vision.py
server/app/core/: __init__.py  agent.py  bus.py  home_automation.py  llm.py  memory.py  planner.py  robot_manager.py
server/app/models/: __init__.py  schemas.py
server/tests/: conftest.py  test_assistant.py  test_health.py  test_memory.py  test_planner.py
vision/: Dockerfile  README.md  requirements.txt
vision/vector_vision/: __init__.py  __main__.py  camera.py  config.py  detector.py  faces.py  ocr.py  publisher.py  tracking.py  types.py  worker.py
voice/: README.md  config.example.yaml  requirements.txt
voice/vector_voice/: __init__.py  __main__.py  assistant.py  (+5 more)
(+20 files in other folders)
