[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vector-server"
version = "0.1.0"
description = "VECTOR AI server — the reasoning, planning and orchestration brain."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "VECTOR contributors" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "paho-mqtt>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Reasoning backends — install only what you use.
anthropic = ["anthropic>=0.25"]
openai = ["openai>=1.30"]
# Developer tooling.
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
