<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vector_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch files that bring up the whole VECTOR robot.</description>
  <maintainer email="dev@vector.local">VECTOR contributors</maintainer>
  <license>MIT</license>

  <exec_depend>vector_base</exec_depend>
  <exec_depend>vector_arm</exec_depend>
  <exec_depend>vector_perception</exec_depend>
  <exec_depend>vector_bridge</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
